[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/big_gem_1.png" type="Texture" id=1]
[ext_resource path="res://sprites/big_gem_0.png" type="Texture" id=2]
[ext_resource path="res://scripts/big_coin.gd" type="Script" id=3]
[ext_resource path="res://sprites/shadow1.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="big_coin" type="Area2D"]
script = ExtResource( 3 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
frames = SubResource( 2 )
playing = true

[node name="visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1, 0 )

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.329412 )
position = Vector2( 1, 18 )
scale = Vector2( 0.604167, 1 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_big_coin_area_entered"]
[connection signal="screen_exited" from="visibility" to="." method="_on_visibility_screen_exited"]
